feat: added interim processed data

--- a/notebooks/process_audio.ipynb
+++ b/notebooks/process_audio.ipynb
@@ -35,14 +35,14 @@
     "    mel_points = np.linspace(mel_min, mel_max, num_filters + 2)\n",
     "    hz_points = 700 * (10**(mel_points / 2595) - 1)\n",
     "    bin_points = np.floor((fft_size + 1) * hz_points / sample_rate).astype(int)\n",
-    "    \n",
+    "\n",
     "    filters = np.zeros((num_filters, fft_size // 2 + 1))\n",
     "    for i in range(1, num_filters + 1):\n",
     "        filters[i - 1, bin_points[i - 1]:bin_points[i]] = \\\n",
     "            (np.arange(bin_points[i - 1], bin_points[i]) - bin_points[i - 1]) / (bin_points[i] - bin_points[i - 1])\n",
     "        filters[i - 1, bin_points[i]:bin_points[i + 1]] = \\\n",
     "            1 - (np.arange(bin_points[i], bin_points[i + 1]) - bin_points[i]) / (bin_points[i + 1] - bin_points[i])\n",
-    "    \n",
+    "\n",
     "    return filters\n",
     "\n",
     "def extract_mfsc(audio_path):\n",
@@ -227,7 +227,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "default",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -245,5 +245,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
