--- a/notebooks/process_faces.ipynb
+++ b/notebooks/process_faces.ipynb
@@ -13,14 +13,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ses01F_impro02.avi', 'Ses01M_impro06.avi', '.DS_Store', 'Ses01F_script01_2.avi', 'Ses01M_impro03.avi', 'Ses01M_script02_1.avi', 'Ses01F_impro01.avi', 'Ses01F_impro03.avi', 'Ses01F_script02_1.avi', 'Ses01M_script01_1.avi', 'Thumbs.db', 'Ses01M_script03_1.avi', 'Ses01F_script01_3.avi', 'Ses01F_impro07.avi', 'Ses01F_script01_1.avi', 'Ses01F_impro05.avi', 'Ses01M_impro04.avi', 'Ses01F_impro04.avi', 'Ses01M_script01_3.avi', 'Ses01M_script03_2.avi', 'Ses01M_script02_2.avi', 'Ses01M_impro05.avi', 'Ses01M_impro07.avi', 'Ses01F_script03_1.avi', 'Ses01F_script02_2.avi', 'Ses01F_script03_2.avi', 'Ses01M_impro02.avi', 'Ses01M_script01_2.avi', 'Ses01F_impro06.avi', 'Ses01M_impro01.avi']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "def list_files_in_folder(folder_path):\n",
+    "    # Get all items in the folder\n",
+    "    items = os.listdir(folder_path)\n",
+    "\n",
+    "    # Filter out directories, keeping only files\n",
+    "    files = [item for item in items if os.path.isfile(os.path.join(folder_path, item))]\n",
+    "\n",
+    "    return files\n",
+    "\n",
+    "# Example usage\n",
+    "folder_path = '../data/raw/iemocap/IEMOCAP_full_release/Session1/dialog/avi/DivX/'\n",
+    "files = list_files_in_folder(folder_path)\n",
+    "print(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 31/31 [06:24<00:00, 12.41s/it]\n",
+      "100%|██████████| 32/32 [07:56<00:00, 14.89s/it]\n",
+      "100%|██████████| 31/31 [07:03<00:00, 13.65s/it]\n",
+      "100%|██████████| 32/32 [07:04<00:00, 13.26s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
+    "from tqdm import tqdm\n",
     "\n",
     "def extract_video_segments(video_path, lab_file, output_folder):\n",
     "    # Open video file\n",
+    "    if not os.path.exists(video_path):\n",
+    "        raise FileNotFoundError(f\"Video file not found: {video_path}\")\n",
     "    cap = cv2.VideoCapture(video_path)\n",
     "    fps = cap.get(cv2.CAP_PROP_FPS)\n",
     "\n",
@@ -39,68 +84,52 @@
     "\n",
     "        # Read and save frames for the utterance\n",
     "        frames = []\n",
-    "        for frame_idx in range(start_frame, end_frame + 1):\n",
+    "        for _ in range(start_frame, end_frame + 1):\n",
     "            ret, frame = cap.read()\n",
     "            if not ret:\n",
     "                break\n",
     "            frames.append(frame)\n",
     "\n",
+    "        if not frames:\n",
+    "            raise ValueError(f\"No frames extracted for utterance {utterance_name}\")\n",
+    "\n",
     "        # Save the extracted frames as a video clip\n",
     "        out = cv2.VideoWriter(f'{output_folder}/{utterance_name}.avi', \n",
-    "                              cv2.VideoWriter_fourcc(*'XVID'), fps, (frame.shape[1], frame.shape[0]))\n",
+    "                              cv2.VideoWriter_fourcc(*'XVID'), fps, (frames[0].shape[1], frames[0].shape[0]))\n",
     "        for frame in frames:\n",
     "            out.write(frame)\n",
+    "\n",
     "        out.release()\n",
     "\n",
     "    cap.release()\n",
     "\n",
-    "# Usage\n",
-    "video_path = 'SessionX/dialog/avi/Ses01F_impro01.avi'\n",
-    "lab_file = 'SessionX/dialog/lab/Ses01F_impro01.lab'\n",
-    "output_folder = 'output_segments'\n",
-    "extract_video_segments(video_path, lab_file, output_folder)\n",
+    "def main():\n",
+    "    avi_dir_list = [\n",
+    "        f\"../data/raw/iemocap/IEMOCAP_full_release/Session{i}/dialog/avi/DivX/\" for i in range(2, 6)\n",
+    "    ]\n",
+    "    lab_dir_list = [\n",
+    "        f\"../data/raw/iemocap/IEMOCAP_full_release/Session{i}/dialog/lab/Ses0{i}_F/\" for i in range(2, 6)\n",
+    "    ]\n",
     "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from pydub import AudioSegment\n",
-    "from transformers import BertTokenizer\n",
+    "    for i, directory_tuple in enumerate(zip(avi_dir_list, lab_dir_list)):\n",
+    "        video_dir, lab_dir = directory_tuple\n",
+    "        files = list_files_in_folder(video_dir)\n",
+    "        for file in tqdm(files):\n",
+    "            if file.split('.')[-1] != 'avi':\n",
+    "                continue\n",
+    "            video_path = video_dir + file\n",
+    "            lab_file = lab_dir + f\"{file.split('.')[0]}.lab\"\n",
+    "            output_folder = f\"../data/interim/iemocap/Session{i + 2}\"\n",
+    "            os.makedirs(output_folder, exist_ok=True)\n",
+    "            try:\n",
+    "                extract_video_segments(video_path, lab_file, output_folder)\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error processing {file}: {e}\")\n",
+    "                print(f\"Error occured at {video_path}, {lab_file}\")\n",
+    "                break\n",
     "\n",
-    "# Load MELD CSV files\n",
-    "train_df = pd.read_csv('train_sent_emo.csv')\n",
-    "dev_df = pd.read_csv('dev_sent_emo.csv')\n",
-    "test_df = pd.read_csv('test_sent_emo.csv')\n",
-    "\n",
-    "# Video processing function\n",
-    "def extract_frames_from_video(video_path):\n",
-    "    cap = cv2.VideoCapture(video_path)\n",
-    "    frames = []\n",
-    "    while True:\n",
-    "        ret, frame = cap.read()\n",
-    "        if not ret:\n",
-    "            break\n",
-    "        frames.append(frame)\n",
-    "    cap.release()\n",
-    "    return frames\n",
-    "\n",
-    "# Audio processing function\n",
-    "def extract_audio_features(audio_path):\n",
-    "    audio = AudioSegment.from_file(audio_path)\n",
-    "    # Extract features here (e.g., MFCC)\n",
-    "    # Placeholder for feature extraction code\n",
-    "    return np.array([])  # Replace with actual feature extraction\n",
-    "\n",
-    "# Text processing function\n",
-    "def preprocess_text(text):\n",
-    "    tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
-    "    return tokenizer(text, padding=True, truncation=True, return_tensors=\"pt\")\n",
-    "\n",
-    "# Example usage\n",
-    "example_video_path = 'example.mp4'\n",
-    "frames = extract_frames_from_video(example_video_path)\n",
-    "audio_features = extract_audio_features('example.wav')\n",
-    "text_features = preprocess_text(\"example utterance text\")\n",
-    "\n"
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   },
   {
@@ -132,7 +161,6 @@
     "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
     "    faces = detector(gray)\n",
     "    landmarks_list = []\n",
-    "\n",
     "    for face in faces:\n",
     "        shape = predictor(gray, face)\n",
     "        landmarks = face_utils.shape_to_np(shape)  # Convert to (x, y) coordinates\n",
@@ -146,9 +174,51 @@
     "        # landmarks now contain the (x, y) coordinates for facial landmarks\n",
     "        print(landmarks)  # For demonstration, you can store them as needed\n",
     "\n",
-    "# Usage\n",
-    "frames = [...]  # Assume frames are already extracted\n",
-    "process_utterance_frames(frames)\n"
+    "def extract_frames(video_path):\n",
+    "    # Open video file\n",
+    "    if not os.path.exists(video_path):\n",
+    "        raise FileNotFoundError(f\"Video file not found: {video_path}\")\n",
+    "    cap = cv2.VideoCapture(video_path)\n",
+    "    frames = []\n",
+    "\n",
+    "    start_frame = 0  # Define start_frame\n",
+    "    end_frame = int(cap.get(cv2.CAP_PROP_FRAME_COUNT)) - 1  # Define end_frame as the last frame of the video\n",
+    "\n",
+    "    cap.set(cv2.CAP_PROP_POS_FRAMES, start_frame)  # Set video to start frame\n",
+    "\n",
+    "    for _ in range(start_frame, end_frame + 1):\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            break\n",
+    "        frames.append(frame)\n",
+    "    cap.release()\n",
+    "\n",
+    "    return frames\n",
+    "\n",
+    "def main():\n",
+    "    interim_avi_list = [\n",
+    "        f\"../data/interim/iemocap/session{i}/\" for i in range(1, 6)\n",
+    "    ]\n",
+    "\n",
+    "    for i, video_dir in enumerate(interim_avi_list):\n",
+    "        files = list_files_in_folder(video_dir)\n",
+    "        for file in tqdm(files):\n",
+    "            if file.split('.')[-1] != 'avi':\n",
+    "                continue\n",
+    "            video_path = video_dir + file\n",
+    "            frames = extract_frames(video_path)\n",
+    "            try:\n",
+    "                process_utterance_frames(frames)\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error processing {file}: {e}\")\n",
+    "                print(f\"Error occured at {video_path}, {lab_file}\")\n",
+    "                break\n",
+    "    # Usage\n",
+    "    frames = [...]  # Assume frames are already extracted\n",
+    "    process_utterance_frames(frames)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   },
   {
@@ -384,11 +454,74 @@
     "            cnn_data = np.array(utterance_data['low_level_features'])\n",
     "            utterance_grp.create_dataset('low_level_features', data=cnn_data, compression=\"gzip\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Archive\n",
+    "\n",
+    "Currently, code that is not in use. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Feature extraction code\n",
+    "### Currently, this code is just a placeholder and does not actually extract features\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from pydub import AudioSegment\n",
+    "from transformers import BertTokenizer\n",
+    "\n",
+    "# Load MELD CSV files\n",
+    "train_df = pd.read_csv('train_sent_emo.csv')\n",
+    "dev_df = pd.read_csv('dev_sent_emo.csv')\n",
+    "test_df = pd.read_csv('test_sent_emo.csv')\n",
+    "\n",
+    "# Video processing function\n",
+    "def extract_frames_from_video(video_path):\n",
+    "    cap = cv2.VideoCapture(video_path)\n",
+    "    frames = []\n",
+    "    while True:\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            break\n",
+    "        frames.append(frame)\n",
+    "    cap.release()\n",
+    "    return frames\n",
+    "\n",
+    "# Audio processing function\n",
+    "def extract_audio_features(audio_path):\n",
+    "    audio = AudioSegment.from_file(audio_path)\n",
+    "    # Extract features here (e.g., MFCC)\n",
+    "    # Placeholder for feature extraction code\n",
+    "    return np.array([])  # Replace with actual feature extraction\n",
+    "\n",
+    "# Text processing function\n",
+    "def preprocess_text(text):\n",
+    "    tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
+    "    return tokenizer(text, padding=True, truncation=True, return_tensors=\"pt\")\n",
+    "\n",
+    "def main():\n",
+    "    # Example usage\n",
+    "    example_video_path = 'example.mp4'\n",
+    "    frames = extract_frames_from_video(example_video_path)\n",
+    "    audio_features = extract_audio_features('example.wav')\n",
+    "    text_features = preprocess_text(\"example utterance text\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "default",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -406,5 +539,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
