--- a/notebooks/process_faces.ipynb
+++ b/notebooks/process_faces.ipynb
@@ -13,17 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Ses01F_impro02.avi', 'Ses01M_impro06.avi', '.DS_Store', 'Ses01F_script01_2.avi', 'Ses01M_impro03.avi', 'Ses01M_script02_1.avi', 'Ses01F_impro01.avi', 'Ses01F_impro03.avi', 'Ses01F_script02_1.avi', 'Ses01M_script01_1.avi', 'Thumbs.db', 'Ses01M_script03_1.avi', 'Ses01F_script01_3.avi', 'Ses01F_impro07.avi', 'Ses01F_script01_1.avi', 'Ses01F_impro05.avi', 'Ses01M_impro04.avi', 'Ses01F_impro04.avi', 'Ses01M_script01_3.avi', 'Ses01M_script03_2.avi', 'Ses01M_script02_2.avi', 'Ses01M_impro05.avi', 'Ses01M_impro07.avi', 'Ses01F_script03_1.avi', 'Ses01F_script02_2.avi', 'Ses01F_script03_2.avi', 'Ses01M_impro02.avi', 'Ses01M_script01_2.avi', 'Ses01F_impro06.avi', 'Ses01M_impro01.avi']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -44,20 +36,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 31/31 [06:24<00:00, 12.41s/it]\n",
-      "100%|██████████| 32/32 [07:56<00:00, 14.89s/it]\n",
-      "100%|██████████| 31/31 [07:03<00:00, 13.65s/it]\n",
-      "100%|██████████| 32/32 [07:04<00:00, 13.26s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "from tqdm import tqdm\n",
@@ -94,8 +75,13 @@
     "            raise ValueError(f\"No frames extracted for utterance {utterance_name}\")\n",
     "\n",
     "        # Save the extracted frames as a video clip\n",
-    "        out = cv2.VideoWriter(f'{output_folder}/{utterance_name}.avi', \n",
-    "                              cv2.VideoWriter_fourcc(*'XVID'), fps, (frames[0].shape[1], frames[0].shape[0]))\n",
+    "        out = cv2.VideoWriter(\n",
+    "        f\"{output_folder}/{utterance_name}.mp4\",\n",
+    "        cv2.VideoWriter_fourcc(*\"avc1\"),\n",
+    "        fps,\n",
+    "        (frames[0].shape[1], frames[0].shape[0]),\n",
+    "        )\n",
+    "\n",
     "        for frame in frames:\n",
     "            out.write(frame)\n",
     "\n",
@@ -105,10 +91,10 @@
     "\n",
     "def main():\n",
     "    avi_dir_list = [\n",
-    "        f\"../data/raw/iemocap/IEMOCAP_full_release/Session{i}/dialog/avi/DivX/\" for i in range(2, 6)\n",
+    "        f\"../data/raw/iemocap/IEMOCAP_full_release/Session{i}/dialog/avi/DivX/\" for i in range(1, 6)\n",
     "    ]\n",
     "    lab_dir_list = [\n",
-    "        f\"../data/raw/iemocap/IEMOCAP_full_release/Session{i}/dialog/lab/Ses0{i}_F/\" for i in range(2, 6)\n",
+    "        f\"../data/raw/iemocap/IEMOCAP_full_release/Session{i}/dialog/lab/Ses0{i}_F/\" for i in range(1, 6)\n",
     "    ]\n",
     "\n",
     "    for i, directory_tuple in enumerate(zip(avi_dir_list, lab_dir_list)):\n",
@@ -119,7 +105,7 @@
     "                continue\n",
     "            video_path = video_dir + file\n",
     "            lab_file = lab_dir + f\"{file.split('.')[0]}.lab\"\n",
-    "            output_folder = f\"../data/interim/iemocap/Session{i + 2}\"\n",
+    "            output_folder = f\"../data/interim/iemocap/Session{i + 1}\"\n",
     "            os.makedirs(output_folder, exist_ok=True)\n",
     "            try:\n",
     "                extract_video_segments(video_path, lab_file, output_folder)\n",
@@ -150,8 +136,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import cv2\n",
     "import dlib\n",
     "from imutils import face_utils\n",
+    "import numpy as np\n",
+    "from tqdm import tqdm\n",
     "\n",
     "# Load pre-trained face detector and shape predictor models\n",
     "detector = dlib.get_frontal_face_detector()\n",
@@ -163,59 +152,65 @@
     "    landmarks_list = []\n",
     "    for face in faces:\n",
     "        shape = predictor(gray, face)\n",
-    "        landmarks = face_utils.shape_to_np(shape)  # Convert to (x, y) coordinates\n",
+    "        # Convert to (x, y) coordinates\n",
+    "        landmarks = face_utils.shape_to_np(shape)\n",
     "        landmarks_list.append(landmarks)\n",
     "    return landmarks_list\n",
     "\n",
     "# Process all frames in the utterance\n",
-    "def process_utterance_frames(frames):\n",
-    "    for frame in frames:\n",
+    "def save_utterance_frames(frames, filename):\n",
+    "    for j, frame in enumerate(frames):\n",
     "        landmarks = detect_landmarks(frame)\n",
-    "        # landmarks now contain the (x, y) coordinates for facial landmarks\n",
-    "        print(landmarks)  # For demonstration, you can store them as needed\n",
+    "        for i, landmark in enumerate(landmarks):\n",
+    "            output_dir = f\"../data/processed/landmarks/{'/'.join(filename.split('/')[0:2])}/\"\n",
+    "            os.makedirs(output_dir, exist_ok=True)\n",
+    "            try:\n",
+    "                np.savez(f'../data/processed/landmarks/{filename}_face{i}_frame{j}.npz', landmark=landmark)\n",
+    "            except Exception as e:\n",
+    "                print(f\"Error processing {filename}: {e}\")\n",
+    "                break\n",
     "\n",
     "def extract_frames(video_path):\n",
     "    # Open video file\n",
     "    if not os.path.exists(video_path):\n",
     "        raise FileNotFoundError(f\"Video file not found: {video_path}\")\n",
     "    cap = cv2.VideoCapture(video_path)\n",
+    "    if not cap.isOpened():\n",
+    "        print(\"Error: Could not open video file.\")\n",
     "    frames = []\n",
     "\n",
     "    start_frame = 0  # Define start_frame\n",
     "    end_frame = int(cap.get(cv2.CAP_PROP_FRAME_COUNT)) - 1  # Define end_frame as the last frame of the video\n",
-    "\n",
     "    cap.set(cv2.CAP_PROP_POS_FRAMES, start_frame)  # Set video to start frame\n",
     "\n",
-    "    for _ in range(start_frame, end_frame + 1):\n",
+    "    for i in range(start_frame, end_frame + 1):\n",
     "        ret, frame = cap.read()\n",
     "        if not ret:\n",
+    "            print(f\"Error: Could not read frame {i}\")\n",
     "            break\n",
     "        frames.append(frame)\n",
+    "\n",
     "    cap.release()\n",
     "\n",
     "    return frames\n",
     "\n",
     "def main():\n",
-    "    interim_avi_list = [\n",
-    "        f\"../data/interim/iemocap/session{i}/\" for i in range(1, 6)\n",
+    "    interim_mp4_list = [\n",
+    "        f\"../data/interim/iemocap/Session{i}/\" for i in range(1, 6)\n",
     "    ]\n",
     "\n",
-    "    for i, video_dir in enumerate(interim_avi_list):\n",
+    "    for video_dir in interim_mp4_list:\n",
     "        files = list_files_in_folder(video_dir)\n",
     "        for file in tqdm(files):\n",
-    "            if file.split('.')[-1] != 'avi':\n",
+    "            if file.split('.')[-1] != 'mp4':\n",
     "                continue\n",
     "            video_path = video_dir + file\n",
     "            frames = extract_frames(video_path)\n",
     "            try:\n",
-    "                process_utterance_frames(frames)\n",
+    "                save_utterance_frames(frames, ('/'.join(video_path.split('/')[3:])).split('.')[0])\n",
     "            except Exception as e:\n",
     "                print(f\"Error processing {file}: {e}\")\n",
-    "                print(f\"Error occured at {video_path}, {lab_file}\")\n",
     "                break\n",
-    "    # Usage\n",
-    "    frames = [...]  # Assume frames are already extracted\n",
-    "    process_utterance_frames(frames)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()"
@@ -239,14 +234,56 @@
    "outputs": [],
    "source": [
     "import openface\n",
+    "import cv2\n",
     "\n",
-    "# Initialize OpenFace feature extractor\n",
-    "face_model = openface.Face()\n",
+    "# Initialize the face alignment model\n",
+    "align = openface.AlignDlib(\"../models/shape_predictor_68_face_landmarks.dat\")\n",
+    "\n",
+    "# Initialize the OpenFace neural network\n",
+    "net = openface.TorchNeuralNet(\"../models/nn4.small2.v1.t7\", imgDim=96, cuda = True)\n",
     "\n",
     "def extract_action_units(image):\n",
+    "    # Convert image to RGB (OpenFace expects RGB format)\n",
     "    rgb_img = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
-    "    faus = face_model.detectFace(rgb_img, with_landmarks=True)  # Detect FAUs\n",
-    "    return faus  # Returns FAU intensities and presence\n",
+    "\n",
+    "    # Detect and align the face\n",
+    "    bb = align.getLargestFaceBoundingBox(rgb_img)\n",
+    "    if bb is None:\n",
+    "        raise ValueError(\"No face detected\")\n",
+    "\n",
+    "    aligned_face = align.align(96, rgb_img, bb, landmarkIndices=openface.AlignDlib.OUTER_EYES_AND_NOSE)\n",
+    "\n",
+    "    if aligned_face is None:\n",
+    "        raise ValueError(\"Failed to align face\")\n",
+    "\n",
+    "    # Extract face features using the neural network\n",
+    "    face_representation = net.forward(aligned_face)\n",
+    "\n",
+    "    return face_representation\n",
+    "\n",
+    "def extract_frames(video_path):\n",
+    "    # Open video file\n",
+    "    if not os.path.exists(video_path):\n",
+    "        raise FileNotFoundError(f\"Video file not found: {video_path}\")\n",
+    "    cap = cv2.VideoCapture(video_path)\n",
+    "    if not cap.isOpened():\n",
+    "        print(\"Error: Could not open video file.\")\n",
+    "    frames = []\n",
+    "\n",
+    "    start_frame = 0  # Define start_frame\n",
+    "    end_frame = int(cap.get(cv2.CAP_PROP_FRAME_COUNT)) - 1  # Define end_frame as the last frame of the video\n",
+    "    cap.set(cv2.CAP_PROP_POS_FRAMES, start_frame)  # Set video to start frame\n",
+    "\n",
+    "    for i in range(start_frame, end_frame + 1):\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            print(f\"Error: Could not read frame {i}\")\n",
+    "            break\n",
+    "        frames.append(frame)\n",
+    "\n",
+    "    cap.release()\n",
+    "\n",
+    "    return frames\n",
     "\n",
     "# Process frames to extract FAUs\n",
     "def extract_faus_for_frames(frames):\n",
@@ -257,7 +294,8 @@
     "    return faus_per_frame\n",
     "\n",
     "# Usage\n",
-    "frames = [...]  # Assume frames are already extracted\n",
+    "video_path = '../data/interim/iemocap/Session1/Ses01F_impro01_F000.mp4'\n",
+    "frames = extract_frames(video_path)\n",
     "faus_per_frame = extract_faus_for_frames(frames)\n",
     "print(faus_per_frame)\n"
    ]
