--- a/notebooks/b1.ipynb
+++ b/notebooks/b1.ipynb
@@ -8,11 +8,11 @@
     "\n",
     "0. patient_number(int)\n",
     "1. Bruise: streamlit을 이용한 manual input\n",
-    "=> bruise_vector = [head_count, head_length, arms_count, arms_length, legs_count, legs_length, torso_count, torso_length, buttocks_count, buttocks_length, specific_shape] *_count(int), _length(float), specific_shape(0 or 1)\n",
+    "=> bruise_vector = [head_count, head_length, arms_count, arms_length, legs_count, legs_length, torso_count, torso_length, buttocks_count, buttocks_length, specific_shape]*_count(int), _length(float), specific_shape(0 or 1)\n",
     "2. Video/Audio: Video(.mp4) input\n",
     "=> emotion_vector = [Happiness, Sadness, Anger, Surprise, Fear] *모두 float(0-1), 의식 없을 시 제외\n",
     "3. History taking: streamlit을 이용한 manual input\n",
-    "=> response_vector = [abuse_likely, match_explanation, developemental_stage, treatment_delayed, consistent_history, poor_condition, inappropriate_relationship] *0(아니오) or 1(예) or 2(유보)\n",
+    "=> response_vector = [consciousness_state, guardian_status, abuse_likely, match_explanation, developemental_stage, treatment_delayed, consistent_history, poor_condition, inappropriate_relationship] *0(아니오) or 1(예) or None(유보)\n",
     "4. Basic information: csv input\n",
     "=> info_vector = [age_months, sex, height_cm, weight_kg] *앞에서부터 각각 int, 0(남자), 1(여자), Float, Float\n",
     "5. X-ray assessment: txt input(여러 부위의 .txt형식 판독문을 합쳐서 하나의 .txt 파일로 input)\n",
