--- a/notebooks/xgboo2.ipynb
+++ b/notebooks/xgboo2.ipynb
@@ -158,84 +158,39 @@
     "info_vector = pd.DataFrame(info_vector_list, columns=['patient_age', 'patient_sex', 'height_percentile', 'weight_percentile'])\n",
     "\n",
     "\n",
+    "# 패딩된 벡터들을 데이터프레임으로 결합\n",
+    "X = pd.concat([pd.DataFrame(info_vector), pd.DataFrame(bruise_vector),\n",
+    "               pd.DataFrame(response_vector), pd.DataFrame(lab_vector), pd.DataFrame(xray_vector), pd.DataFrame(video_vector)], axis=1)\n",
     "\n",
-    "# 전체 데이터에서 벡터 결합 (벡터별로 분리된 상태 유지)\n",
-    "X = pd.concat([info_vector, bruise_vector, response_vector, lab_vector, xray_vector, video_vector], axis=1)\n",
-    "\n",
-    "# 전체 데이터에서 train_test_split 수행\n",
+    "# Train/Test Split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=None)\n",
     "\n",
-    "# 분할된 X_train과 X_test에서 벡터별로 데이터 추출\n",
-    "X_train_info = X_train.iloc[:, 1:5].values\n",
-    "X_train_bruise = X_train.iloc[:, 5:16].values\n",
-    "X_train_response = X_train.iloc[:, 16:25].values\n",
-    "X_train_lab = X_train.iloc[:, 25:44].values\n",
-    "X_train_xray = X_train.iloc[:, 44:53].values\n",
-    "X_train_video = X_train.iloc[:, 53:83].values\n",
+    "# 데이터 형식 확인 및 변환\n",
+    "X_train = X_train.astype(float)\n",
+    "X_test = X_test.astype(float)\n",
+    "y_train = y_train.astype(float)\n",
+    "y_test = y_test.astype(float)\n",
     "\n",
-    "X_test_info = X_test.iloc[:, 1:5].values\n",
-    "X_test_bruise = X_test.iloc[:, 5:16].values\n",
-    "X_test_response = X_test.iloc[:, 16:25].values\n",
-    "X_test_lab = X_test.iloc[:, 25:44].values\n",
-    "X_test_xray = X_test.iloc[:, 44:53].values\n",
-    "X_test_video = X_test.iloc[:, 53:83].values\n",
+    "# numpy 배열로 변환\n",
+    "X_train_np = X_train.values  # 또는 X_train.to_numpy()\n",
+    "y_train_np = y_train.values\n",
     "\n",
-    "# 각 벡터별 DMatrix 생성\n",
-    "dtrain_info = xgb.DMatrix(X_train_info, label=y_train)\n",
-    "dtest_info = xgb.DMatrix(X_test_info, label=y_test)\n",
-    "dtrain_bruise = xgb.DMatrix(X_train_bruise, label=y_train)\n",
-    "dtest_bruise = xgb.DMatrix(X_test_bruise, label=y_test)\n",
-    "dtrain_response = xgb.DMatrix(X_train_response, label=y_train)\n",
-    "dtest_response = xgb.DMatrix(X_test_response, label=y_test)\n",
-    "dtrain_lab = xgb.DMatrix(X_train_lab, label=y_train)\n",
-    "dtest_lab = xgb.DMatrix(X_test_lab, label=y_test)\n",
-    "dtrain_xray = xgb.DMatrix(X_train_xray, label=y_train)\n",
-    "dtest_xray = xgb.DMatrix(X_test_xray, label=y_test)\n",
-    "dtrain_video = xgb.DMatrix(X_train_video, label=y_train)\n",
-    "dtest_video = xgb.DMatrix(X_test_video, label=y_test)\n",
+    "# DMatrix로 변환\n",
+    "dtrain = xgb.DMatrix(X_train_np, label=y_train_np)\n",
+    "dtest = xgb.DMatrix(X_test.values, label=y_test.values)\n",
+    "\n",
     "\n",
     "# 모델 파라미터 설정\n",
-    "params = {'objective': 'binary:logistic', 'max_depth': 5, 'eta': 0.1}\n",
+    "params = {\n",
+    "    'objective': 'binary:logistic',\n",
+    "    'max_depth': 5,\n",
+    "    'eta': 0.1,\n",
+    "    'verbosity': 0\n",
+    "}\n",
     "num_round = 500\n",
     "\n",
-    "# 개별 모델 학습\n",
-    "model_info = xgb.train(params, dtrain_info, num_round)\n",
-    "model_bruise = xgb.train(params, dtrain_bruise, num_round)\n",
-    "model_response = xgb.train(params, dtrain_response, num_round)\n",
-    "model_lab = xgb.train(params, dtrain_lab, num_round)\n",
-    "model_xray = xgb.train(params, dtrain_xray, num_round)\n",
-    "model_video = xgb.train(params, dtrain_video, num_round)\n",
-    "\n",
-    "# 개별 모델 예측\n",
-    "y_pred_info = model_info.predict(dtest_info)\n",
-    "y_pred_bruise = model_bruise.predict(dtest_bruise)\n",
-    "y_pred_response = model_response.predict(dtest_response)\n",
-    "y_pred_lab = model_lab.predict(dtest_lab)\n",
-    "y_pred_xray = model_xray.predict(dtest_xray)\n",
-    "y_pred_video = model_video.predict(dtest_video)\n",
-    "\n",
-    "# 예측 값들을 리스트로 저장\n",
-    "predictions = [y_pred_info, y_pred_bruise, y_pred_response, y_pred_lab, y_pred_xray, y_pred_video]\n",
-    "\n",
-    "# 초기 가중치 (각 가중치의 합이 1이 되도록 초기값 설정)\n",
-    "initial_weights = np.array([1/6] * 6)\n",
-    "\n",
-    "# RMSE를 최소화하는 최적화 함수 정의\n",
-    "def rmse_loss(weights):\n",
-    "    weighted_pred = sum(w * pred for w, pred in zip(weights, predictions))\n",
-    "    rmse = mean_squared_error(y_test, weighted_pred, squared=False)\n",
-    "    return rmse\n",
-    "\n",
-    "# 제약 조건: 가중치의 합이 1이 되도록 설정\n",
-    "constraints = {'type': 'eq', 'fun': lambda w: np.sum(w) - 1}\n",
-    "bounds = [(0, 1)] * 6\n",
-    "\n",
-    "# 최적화 수행\n",
-    "result = minimize(rmse_loss, initial_weights, bounds=bounds, constraints=constraints)\n",
-    "\n",
-    "# 최적 가중치 확인\n",
-    "optimal_weights = result.x\n",
-    "\n",
+    "# 모델 학습\n",
+    "trained_model = xgb.train(params, dtrain, num_round)\n",
     "\n",
     "\n",
     "def model(info, bruise, response, lab, xray, video) :\n",
@@ -246,42 +201,53 @@
     "    new_xray_data = pd.DataFrame(xray)\n",
     "    new_video_data = pd.DataFrame(video)\n",
     "\n",
-    "    # DMatrix로 변환\n",
-    "    dnew_info = xgb.DMatrix(new_info_data)\n",
-    "    dnew_bruise = xgb.DMatrix(new_bruise_data)\n",
-    "    dnew_response = xgb.DMatrix(new_response_data)\n",
-    "    dnew_lab = xgb.DMatrix(new_lab_data)\n",
-    "    dnew_xray = xgb.DMatrix(new_xray_data)\n",
-    "    dnew_video = xgb.DMatrix(new_video_data)\n",
+    "    concat = np.concatenate((new_info_data, new_bruise_data, new_response_data, new_lab_data, new_xray_data, new_video_data))\n",
     "\n",
-    "    # 개별 모델로 예측 수행\n",
-    "    pred_info = model_info.predict(dnew_info)\n",
-    "    pred_bruise = model_bruise.predict(dnew_bruise)\n",
-    "    pred_response = model_response.predict(dnew_response)\n",
-    "    pred_lab = model_lab.predict(dnew_lab)\n",
-    "    pred_xray = model_xray.predict(dnew_xray)\n",
-    "    pred_video = model_video.predict(dnew_video)\n",
+    "    dnew_concat = xgb.DMatrix(concat)\n",
     "\n",
-    "        # 예측 값 리스트 생성\n",
-    "    predictions = [pred_info[0], pred_bruise[0], pred_response[0], pred_lab[0], pred_xray[0], pred_video[0]]\n",
+    "    final_pred = trained_model.predict(dnew_concat)[0]\n",
     "\n",
-    "    # 최적 가중치를 적용하여 최종 예측 계산\n",
-    "    final_pred = sum(w * pred for w, pred in zip(optimal_weights, predictions))\n",
-    "    final_pred_sub = [w * pred for w, pred in zip(optimal_weights, predictions)]\n",
-    "    final_pred_sub_rounded = []\n",
-    "    for element in final_pred_sub :\n",
-    "      final_pred_sub_rounded.append(round(element, 3))\n",
+    "    # Extract the top 5 causes from the feature importances\n",
+    "    importance = trained_model.get_score(importance_type='weight')\n",
     "\n",
-    "    prediction_names = np.array(['신체 계측치', '멍 정보', '문진 정보', 'Lab 수치', 'X-ray 영상', '진료 영상'])\n",
+    "    # Normalize the importance values to sum to 1 for involvement rate calculation\n",
     "\n",
-    "    sorted_indices = np.argsort(final_pred_sub)[::-1]\n",
-    "    sorted_weights = np.array(final_pred_sub_rounded)[sorted_indices]\n",
-    "    sorted_names = prediction_names[sorted_indices]\n",
     "\n",
-    "    explainability = list(zip(sorted_names, sorted_weights))\n",
+    "    all_features = list(importance.keys())\n",
+    "    importance_weights = np.array([importance.get(f, 0) for f in all_features])\n",
     "\n",
-    "    return [final_pred, explainability]\n",
-    "    "
+    "    # 입력 벡터와 element-wise 곱하기\n",
+    "    input_vector = np.array(concat)\n",
+    "    contributions = {f: input_vector[i] * importance_weights[i] for i, f in enumerate(all_features)}\n",
+    "    total_contributions = sum(contributions.values())\n",
+    "    normalized_contributions = {k: v / total_contributions for k, v in contributions.items()}\n",
+    "\n",
+    "    # 기여도에 따라 피처 정렬\n",
+    "    sorted_contributions = sorted(normalized_contributions.items(), key=lambda x: abs(x[1]), reverse=True)\n",
+    "    top_5_causes = sorted_contributions[:5]\n",
+    "\n",
+    "    # Map feature indices to actual input vector names for interpretation\n",
+    "    feature_names = ['age', 'sex', 'height', 'weight', 'head_count', 'head_length', 'arms_count', 'arms_length', 'legs_count', 'legs_length',\n",
+    "                    'torso_count', 'torso_length', 'buttocks_count', 'buttocks_length', 'shape_abnormality', 'consciousness', 'guardian_status',\n",
+    "                    'abuse_likely', 'match_explanation', 'developemental_stage', 'treatment_delayed', 'consistent_history', 'poor_condition', 'inappropriate_relationship',\n",
+    "                    'CBC_RBC', 'CBC_WBC', 'CBC_Platelet', 'Hb', 'PT_INR', 'aPTT', 'AST', 'ALT', 'ALP', 'Na', 'K', 'C',\n",
+    "                    'Calcium', 'Phosphorus', '25hydroxyvitaminD', 'Serum_albumin', 'Pre_albumin', 'Transferrin', 'Glucose'\n",
+    "                    'Skull', 'Rib', 'Humerus', 'Radius_Ulna', 'Femur', 'Tibia_Fibula', 'Spiral_fx', 'Metaphyseal_fx',\n",
+    "                    'Happiness1', 'Sadness1', 'Anger1', 'Surprise1', 'Fear1', 'Happiness2', 'Sadness2', 'Anger2', 'Surprise2', 'Fear2',\n",
+    "                    'Happiness3', 'Sadness3', 'Anger3', 'Surprise3', 'Fear3', 'Happiness3', 'Sadness3', 'Anger3', 'Surprise3', 'Fear3'\n",
+    "                    'Happiness5', 'Sadness5', 'Anger5', 'Surprise5', 'Fear5', 'Happiness6', 'Sadness6', 'Anger6', 'Surprise6', 'Fear6'\n",
+    "                    ]\n",
+    "\n",
+    "    # Create abuse_cause vector with top 5 features and normalize involvement rates\n",
+    "    explainability = []\n",
+    "    for feature, importance in top_5_causes:\n",
+    "        # Extract the index from feature (e.g., 'f0' -> 0)\n",
+    "        feature_index = int(feature[1:])  # Remove 'f' and convert to int\n",
+    "        feature_name = feature_names[feature_index]  # Map to human-readable feature name\n",
+    "        involvement_rate = round(importance.item(), 3)  # Normalize to 0-1 range and round for better readability\n",
+    "        explainability.append((feature_name, involvement_rate))\n",
+    "\n",
+    "    return [final_pred, explainability]\n"
    ]
   }
  ],
