--- a/notebooks/b1.ipynb
+++ b/notebooks/b1.ipynb
@@ -29,17 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Abuse Risk Score: 44 %\n",
-      "Cause 1: head_count, Involvement Rate: 0.104\n",
-      "Cause 2: head_length, Involvement Rate: 0.086\n",
-      "Cause 3: arms_count, Involvement Rate: 0.043\n"
+     "ename": "NameError",
+     "evalue": "name 'dtest' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 55\u001b[0m\n\u001b[1;32m     51\u001b[0m model \u001b[38;5;241m=\u001b[39m xgb\u001b[38;5;241m.\u001b[39mtrain(params, dtrain, num_boost_round\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50\u001b[39m)\n\u001b[1;32m     53\u001b[0m \u001b[38;5;66;03m# Assuming model has been trained and predictions have been made as before\u001b[39;00m\n\u001b[1;32m     54\u001b[0m \u001b[38;5;66;03m# Normalize abuse risk score to 0-100% scale (if it's a regression output)\u001b[39;00m\n\u001b[0;32m---> 55\u001b[0m abuse_risk_score_raw \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mpredict(\u001b[43mdtest\u001b[49m)[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     56\u001b[0m abuse_risk_score \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmin\u001b[39m(\u001b[38;5;28mmax\u001b[39m(\u001b[38;5;28mint\u001b[39m(abuse_risk_score_raw \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m10\u001b[39m), \u001b[38;5;241m0\u001b[39m), \u001b[38;5;241m100\u001b[39m)  \u001b[38;5;66;03m# Adjust scale and clip to [0, 100]\u001b[39;00m\n\u001b[1;32m     58\u001b[0m \u001b[38;5;66;03m# Extract the top 3 causes from the feature importances\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dtest' is not defined"
      ]
     }
    ],
@@ -154,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
